# SPDX-FileCopyrightText: Copyright (c) 2026 Przemyslaw Patrick Socha
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools>=77.0.0",
    "wheel",
    "setuptools-scm",
]

[project]
name = "circuitpython-rm690b0"
description = "CircuitPython displayio driver for RM690B0 AMOLED displays"
version = "0.0.0+auto.0"
readme = "README.rst"
authors = [
    {name = "Przemyslaw Patrick Socha"}
]
urls = {Homepage = "https://github.com/ppsx/CircuitPython_RM690B0"}
keywords = [
    "circuitpython",
    "micropython",
    "rm690b0",
    "amoled",
    "display",
    "displayio",
    "waveshare",
]
license = "MIT"
license-files = ["LICENSE", "LICENSES/*.txt"]
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
py-modules = ["rm690b0"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {optional = {file = ["optional_requirements.txt"]}}
